# coffee_project

./: .gitignore  README.md  config_template.env  enriched_coffee_shops.csv  pyproject.toml
coffee_project/: anthropic_utils.py  example_usage.py  google_maps_utils.py  html_utils.py  main.py  requirements.txt  test_image_saving.py
coffee_project/places_list/: example_short_list.csv  勉強カフェ.csv
