[project]
name = "coffee-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "googlemaps>=4.10.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.0.0",
    "geopandas>=0.14.0",
    "folium>=0.15.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "anthropic>=0.57.1",
    "pyarrow>=20.0.0",
]
